objects/APTS_Milestone_Billing_Plan__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Days__c</fullName>
        <label>Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Milestone Billing Plans</relationshipLabel>
        <relationshipName>Milestone_Billing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Percent__c</fullName>
        <label>%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quotation</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Milestone Billing Plans</relationshipLabel>
        <relationshipName>Milestone_Billing_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Terms_of_Payment__c</fullName>
        <label>Terms of Payment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Milestone Billing Plan</label>
    <nameField>
        <displayFormat>MBP-{0000000000}</displayFormat>
        <label>Milestone Billing Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Billing Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>